feat: finální verze projektu Genesis Resources, přidání , přidání BasicUserDTO, DetailedUserDTO, kolekce postman